Fix #5390: Problem about image upload happened on IOS mobile device
It turns out that `height: intrinsic` crashes WebKit on iOS 14.5 (but not later versions).

This hack doesn't appear to be necessary any more anyway due to other CSS changes.

--- a/app/components/media_asset_component/media_asset_component.scss
+++ b/app/components/media_asset_component/media_asset_component.scss
@@ -66,7 +66,6 @@
     .media-asset-container {
       aspect-ratio: var(--media-asset-width) / var(--media-asset-height);
       height: max-content;
-      height: intrinsic; // XXX Safari-only hack to make images correct height on upload page. I have no idea how this works.
     }
   }
 
